tests/int/use_command/snapshots/integration__int__use_command__visibility__inner_glob__modules_visibility__inner_glob_r.snap
---
source: tests/int/use_command/visibility.rs
info:
  program: crawk
  args:
    - "-p"
    - fixtures/modules
    - use
    - "visibility::inner"
    - "-r"
---
success: true
exit_code: 0
----- stdout -----
crate::visibility::*

----- stderr -----
