tests/int/use_command/snapshots/integration__int__use_command__visibility__inner_glob__modules_visibility__inner_glob_r_resolve-globs.snap
---
source: tests/int/use_command/visibility.rs
info:
  program: crawk
  args:
    - "-p"
    - /home/barcie/coding/crawk/fixtures/modules
    - use
    - "visibility::inner"
    - "-r"
    - "--resolve-globs"
---
success: true
exit_code: 0
----- stdout -----
crate::visibility::demonstrate_access
crate::visibility::inner
crate::visibility::pub_crate_mod
crate::visibility::pub_mod
crate::visibility::pub_super_mod

----- stderr -----
